--- a/package.json
+++ b/package.json
@@ -6,21 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "@gsap/react": "^2.1.2",
+    "@prismicio/client": "^7.20.3",
+    "@prismicio/next": "^2.0.2",
+    "@prismicio/react": "^3.2.2",
+    "@react-three/drei": "^9.88.10",
+    "@react-three/fiber": "^9.0.0",
+    "@types/three": "^0.180.0",
+    "clsx": "^2.1.1",
+    "leva": "^0.10.0",
+    "next": "15.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "three": "^0.165.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@slicemachine/adapter-next": "^0.3.86",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "eslint-config-next": "15.1.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "slice-machine-ui": "^2.19.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
