--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --no-lint",
     "start": "next start",
     "lint": "eslint",
     "slicemachine": "start-slicemachine"
@@ -20,8 +20,8 @@
     "clsx": "^2.1.1",
     "leva": "^0.10.0",
     "next": "15.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "three": "^0.165.0"
   },
   "devDependencies": {
