--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@types/three": "^0.180.0",
     "clsx": "^2.1.1",
     "leva": "^0.10.0",
-    "next": "15.1.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "14.2.18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "three": "^0.165.0"
   },
   "devDependencies": {
@@ -31,7 +31,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^9",
-    "eslint-config-next": "^16.0.1",
+    "eslint-config-next": "15.1.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "slice-machine-ui": "^2.19.1",
